// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneIntegrationCreate/> render() should prefill the title field using the phone number's name 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Voice
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add Voice Integration
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Integration title
            </label>
            <div
              class="container"
            >
              <span
                class="inputGroup wrapper group horizontal"
              >
                <div
                  class="picker emojiPicker"
                >
                  <span
                    class="material-icons empty icon"
                  >
                    insert_emoticon
                  </span>
                </div>
                <div
                  class="wrapper"
                >
                  <input
                    appendposition="right"
                    class="input nested"
                    id="title"
                    name="title"
                    placeholder="Ex: Company Support Line"
                    required=""
                    tabindex="0"
                    type="text"
                    value="A Phone Number - Voice"
                  />
                </div>
              </span>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneNumber"
            >
              Phone Number
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇺🇸
                      </span>
                       
                      A Phone Number
                       - 
                      US
                       (
                      +1 415 111 2222
                      )
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneNumber"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <div
                        class="createLabel"
                      >
                        <i
                          class="material-icons"
                        >
                          add
                        </i>
                        <span>
                          Create phone number
                        </span>
                      </div>
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇨🇦
                      </span>
                       
                      Another Phone Number
                       - 
                      CA
                       (
                      +1 813 111 2223
                      )
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇬🇧
                      </span>
                       
                      Intl. Phone Number
                       - 
                      GB
                       (
                      +44 7123 456789
                      )
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <form
              class=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneFunction"
            >
              Function
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Standard number
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneFunction"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Interactive Voice Response (IVR)
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <button
            class="wrapper mt-4 mb-4 fill primary medium isDisabled"
            disabled=""
            type="submit"
          >
            <div
              class="spinner spinner-border"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
            Add voice integration
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationCreate/> render() should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Voice
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add Voice Integration
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Integration title
            </label>
            <div
              class="container"
            >
              <span
                class="inputGroup wrapper group horizontal"
              >
                <div
                  class="picker emojiPicker"
                >
                  <span
                    class="material-icons empty icon"
                  >
                    insert_emoticon
                  </span>
                </div>
                <div
                  class="wrapper"
                >
                  <input
                    appendposition="right"
                    class="input nested"
                    id="title"
                    name="title"
                    placeholder="Ex: Company Support Line"
                    required=""
                    tabindex="0"
                    type="text"
                    value="A Phone Number - Voice"
                  />
                </div>
              </span>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneNumber"
            >
              Phone Number
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇺🇸
                      </span>
                       
                      A Phone Number
                       - 
                      US
                       (
                      +1 415 111 2222
                      )
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneNumber"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <div
                        class="createLabel"
                      >
                        <i
                          class="material-icons"
                        >
                          add
                        </i>
                        <span>
                          Create phone number
                        </span>
                      </div>
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇨🇦
                      </span>
                       
                      Another Phone Number
                       - 
                      CA
                       (
                      +1 813 111 2223
                      )
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇬🇧
                      </span>
                       
                      Intl. Phone Number
                       - 
                      GB
                       (
                      +44 7123 456789
                      )
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <form
              class=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneFunction"
            >
              Function
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Standard number
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneFunction"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Interactive Voice Response (IVR)
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <button
            class="wrapper mt-4 mb-4 fill primary medium"
            type="submit"
          >
            Add voice integration
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationCreate/> render() should submit a valid payload with the selected phone_number_id 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Voice
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add Voice Integration
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Integration title
            </label>
            <div
              class="container"
            >
              <span
                class="inputGroup wrapper group horizontal"
              >
                <div
                  class="picker emojiPicker"
                >
                  <span
                    class="material-icons empty icon"
                  >
                    insert_emoticon
                  </span>
                </div>
                <div
                  class="wrapper"
                >
                  <input
                    appendposition="right"
                    class="input nested"
                    id="title"
                    name="title"
                    placeholder="Ex: Company Support Line"
                    required=""
                    tabindex="0"
                    type="text"
                    value="My Voice integration"
                  />
                </div>
              </span>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneNumber"
            >
              Phone Number
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇺🇸
                      </span>
                       
                      A Phone Number
                       - 
                      US
                       (
                      +1 415 111 2222
                      )
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneNumber"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <div
                        class="createLabel"
                      >
                        <i
                          class="material-icons"
                        >
                          add
                        </i>
                        <span>
                          Create phone number
                        </span>
                      </div>
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇨🇦
                      </span>
                       
                      Another Phone Number
                       - 
                      CA
                       (
                      +1 813 111 2223
                      )
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      <span
                        role="img"
                        style="display: inline-block; font-size: 20px; line-height: 1em; vertical-align: middle; margin-right: 5px;"
                      >
                        🇬🇧
                      </span>
                       
                      Intl. Phone Number
                       - 
                      GB
                       (
                      +44 7123 456789
                      )
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <form
              class=""
            />
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phoneFunction"
            >
              Function
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle selectFullWidth"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      Standard number
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="phoneFunction"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options optionsFullWidth dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Interactive Voice Response (IVR)
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <button
            class="wrapper mt-4 mb-4 fill primary medium isDisabled"
            disabled=""
            type="submit"
          >
            <div
              class="spinner spinner-border"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
            Add voice integration
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
